Added the profile controller
