# backend/src/routes/authRoutes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { generateGuestId, register, login, forgotPassword, verifyOtp, resetPassword, updatePassword } from '../controllers/authController.js';
+import { generateGuestId, register, login, forgotPassword, verifyOtp, resetPassword, updatePassword, profile } from '../controllers/authController.js';
 import { identifyUser } from '../middleware/identifyUser.js';
 
 const router = express.Router();
@@ -11,5 +11,6 @@ router.post('/forgot-password', forgotPassword);
 router.post('/verify-otp', verifyOtp);
 router.post('/reset-password', resetPassword);
 router.post('/update-password', identifyUser, updatePassword);
+router.get('/me', identifyUser, profile);
 
 export default router;
